[tool.poetry]
name = "pyharu"
version = "0.1.0"
description = "Python implementation of the HaruScript language"
authors = ["Ravenclaw-OIer <lilywhite2005@outlook.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
